using Application.Common.Models;

namespace Application.Booths.Queries.GetUsersBooths
{
    public class GetUsersBoothsVM : BoothBaseVM
    {
        public new GetUsersBoothsStallVM Stall { get; set; }
    }
}
