namespace Application.Common.Models
{
    public class StallBaseVM
    {
        public int Id { get; set; }
        public StallTypeBaseVM StallType { get; set; }
    }
}
